--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta content="telephone=no" name=format-detection>
   <meta content=no name=msapplication-tap-highlight>
   <meta content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width" name=viewport>
-  <link href="/icons/favicon-128x128.png" rel=icon sizes=128x128 type=image/png>
-  <link href="/icons/favicon-96x96.png" rel=icon sizes=96x96 type=image/png>
-  <link href="/icons/favicon-32x32.png" rel=icon sizes=32x32 type=image/png>
-  <link href="/icons/favicon-16x16.png" rel=icon sizes=16x16 type=image/png>
-  <link href="/favicon.ico" rel=icon type=image/ico>
-  <script crossorigin src="/assets/index.js" type="module"></script>
-  <link href="/assets/index.css" rel="stylesheet">
+  <link href="/palpal/icons/favicon-128x128.png" rel=icon sizes=128x128 type=image/png>
+  <link href="/palpal/icons/favicon-96x96.png" rel=icon sizes=96x96 type=image/png>
+  <link href="/palpal/icons/favicon-32x32.png" rel=icon sizes=32x32 type=image/png>
+  <link href="/palpal/icons/favicon-16x16.png" rel=icon sizes=16x16 type=image/png>
+  <link href="/palpal/favicon.ico" rel=icon type=image/ico>
+  <script crossorigin src="/palpal/assets/index.js" type="module"></script>
+  <link href="/palpal/assets/index.css" rel="stylesheet">
 </head>
 <body>
 <div id=q-app></div>
