--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta content="telephone=no" name=format-detection>
   <meta content=no name=msapplication-tap-highlight>
   <meta content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width" name=viewport>
-  <link href="/palpal/icons/favicon-128x128.png" rel=icon sizes=128x128 type=image/png>
-  <link href="/palpal/icons/favicon-96x96.png" rel=icon sizes=96x96 type=image/png>
-  <link href="/palpal/icons/favicon-32x32.png" rel=icon sizes=32x32 type=image/png>
-  <link href="/palpal/icons/favicon-16x16.png" rel=icon sizes=16x16 type=image/png>
+  <link href="/palpal/icons/favicon-128x128.jpg" rel=icon sizes=128x128 type=image/png>
+  <link href="/palpal/icons/favicon-96x96.jpg" rel=icon sizes=96x96 type=image/png>
+  <link href="/palpal/icons/favicon-32x32.jpg" rel=icon sizes=32x32 type=image/png>
+  <link href="/palpal/icons/favicon-16x16.jpg" rel=icon sizes=16x16 type=image/png>
   <link href="/palpal/favicon.ico" rel=icon type=image/ico>
   <script crossorigin src="/palpal/assets/index.js" type="module"></script>
   <link href="/palpal/assets/index.css" rel="stylesheet">
